2010-09-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Need a WebSocket implementation
        https://bugs.webkit.org/show_bug.cgi?id=45197

        Add a GIO-based WebSocket implementation.

        * wtf/gobject/GRefPtr.cpp: Added PlatformRefPtr support for GSource.
        (WTF::refPlatformPtr):
        (WTF::derefPlatformPtr):
        * wtf/gobject/GRefPtr.h: Added new template specialization declarations.
        * wtf/gobject/GTypedefs.h: Add some more GLib/GIO forward declarations.

2010-08-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

        Handle MediaQueryExp memory management exclusively with smart pointers
        https://bugs.webkit.org/show_bug.cgi?id=44874
        
        Implemented a non-copying sort function to make it possible to sort a Vector
        of OwnPtrs (which cannot be copied). This is required for the above.

        * wtf/NonCopyingSort.h: Added.
        (WTF::nonCopyingSort): It's secretly heapsort.
        (WTF::heapSort): heapsort implementation.
        (WTF::siftDown): Helper function for heapsort.
        (WTF::heapify): ditto

        Adjust build systems.
        
        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:

2010-09-08  Zoltan Herczeg  <zherczeg@webkit.org>

        Reviewed by Darin Adler.

        Refactoring multiline comments in the lexer
        https://bugs.webkit.org/show_bug.cgi?id=45289

        MultiLine comment parsing is moved to a separate function.

        Slight performance increase on --parse-only tests (from 33.6ms to 32.8ms)
        SunSpider reports no change (from 523.1ms to 521.2ms).

        * parser/Lexer.cpp:
        (JSC::Lexer::parseMultilineComment):
        (JSC::Lexer::lex):
        * parser/Lexer.h:

2010-09-07  James Robinson  <jamesr@chromium.org>

        Compile fix attempt for windows.
